2015-08-19  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs, 
	tp/Texinfo/Convert/XSParagraph/*.c: protect #include <config.h> by
	#ifdef HAVE_CONFIG_H.

2015-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Only configure in tp/Texinfo/Convert/XSParagraph
	subdirectory if building XS extensions is turned on.

2015-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/TestXS: New subdirectory, containing a test XS module to 
	test whether such can be built.
	* tp/Makefile.am: Distribute tp/TestXS.
	* configure.ac <--enable-perl-xs>: Make default value "check", 
	and for that value, build and test the TestXS module.  Subsitute 
	an 'enable_xs' output variable.
	* tp/texi2any.pl: Get 'enable_xs' Autoconf output variable.

2015-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Wipe Autoconf 
	cache value for AC_PROG_CC.
	* tp/Texinfo/Convert/XSParagraph/README: Remove done issue.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Remove mention of 
	fetch_conf.pl, and commented-out rules and variables.  
	Distribute XSParagraph.xs.
	* tp/Texinfo/Convert/XSParagraph/fetch_conf.pl: Delete.

2015-08-18  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm, 
	tp/Texinfo/Convert/XSParagraph/Makefile.PL: remove letters
	from $VERSION, as it breaks loading of module.  Fix undefined variables.
	* tp/MANIFEST, tp/Makefile.PL, tp/Makefile.am, 
	tp/maintain/clean_perl_module_files.sh, 
	tp/maintain/prepare_perl_module_files.sh: update.  Do XSParagraph
	recursively.

2015-08-17  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/MANIFEST, 
	Texinfo/Convert/XSParagraph/Makefile.PL, 
	Texinfo/Convert/XSParagraph/XSParagraph.pm,
	Texinfo/Convert/XSParagraph/t/XSParagraph.t: update stand-alone
	perl module code.  Remove unneeded or generated files.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,